--- a/package.json
+++ b/package.json
@@ -18,5 +18,13 @@
   ],
   "dependencies": {
     "atom-space-pen-views": "^2.0.5"
+  },
+  "homepage": "https://github.com/surrsurus/atom-rust-doc-viewer",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/surrsurus/atom-rust-doc-viewer"
+  },
+  "bugs": {
+    "url": "https://github.com/surrsurus/atom-rust-doc-viewer/issues"
   }
 }
